# http_bind

./: ChangeLog  Emakefile  Makefile.am  README.md  README.txt  acinclude.m4  configure.ac
conf/: ejabberd.cfg.example
doc/: mod_http_bind.tex
src/: ejabberd_c2s.erl
src/web/: ejabberd_http_bind.erl
